# CourseInstance/app.js
@@ -1,7 +1,10 @@
 'use strict';
 
 var SwaggerExpress = require('swagger-express-mw');
+var bodyParser = require('body-parser');
 var app = require('express')();
+var SwaggerUi = require('swagger-tools/middleware/swagger-ui');
+
 
 module.exports = app; // for testing
 
@@ -9,7 +12,11 @@ var config = {
   appRoot: __dirname // required config
 };
 
+// parse application/json
+app.use(bodyParser.json());
+
 SwaggerExpress.create(config, function(err, swaggerExpress) {
+  app.use(SwaggerUi(swaggerExpress.runner.swagger));
   if (err) { throw err; }
 
   // install middleware
@@ -18,10 +25,22 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   var port = process.env.PORT || 10010;
   app.listen(port);
 
-  if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
-  if (swaggerExpress.runner.swagger.paths['/helloyou']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?firstname=Cici&lastname=Sun');
-  }
+});
+
+if (app.get('env') === 'development') {  
+    app.use(function(err, req, res, next) {
+        res.status(err.status || 500);
+        res.render('error', {
+            message: err.message,
+            error: err
+        });
+    });
+}
+
+app.use(function(err, req, res, next) {  
+    res.status(err.status || 500);
+    res.render('error', {
+        message: err.message,
+        error: {}
+    });
 });
